[package]
name = "cuda-schema"
version = "0.1.0"
edition = "2021"
description = "Schema validation — type checking, constraints, JSON schema, and runtime validation for agent messages"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-schema"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
